--- a/client/index.html
+++ b/client/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <header><a href="http://127.0.0.1:5502/client/index.html"><input type="image" src="https://www.svgrepo.com/show/147593/home-button.svg" name="home-button" class="btTxt_submit" id="home_btn"/></a>
-    <a href="http://127.0.0.1:5502/client/login.html"><input type="image" src="http://cdn.onlinewebfonts.com/svg/img_364496.png" name="profile_button" class="profile_btn"/></header></a>
+    <header><a href="http://localhost:4004/index.html"><input type="image" src="https://www.svgrepo.com/show/147593/home-button.svg" name="home-button" class="btTxt_submit" id="home_btn"/></a>
+    <a href=""><input type="image" src="http://cdn.onlinewebfonts.com/svg/img_364496.png" name="profile_button" class="profile_btn"/></header></a>
     <div class="cards">
         <!-- <div class="wz_card">
             <img src="https://www.callofduty.com/content/dam/atvi/callofduty/cod-touchui/blog/hero/mw-wz/WZ-Season-Three-Announce-TOUT.jpg" alt="warzone_card" style="width: 100%;">
@@ -27,7 +27,7 @@
             </div>  
         </div> -->
         <div class="apex_card">
-            <img src="https://media.contentapi.ea.com/content/dam/apex-legends/images/2019/01/apex-featured-image-16x9.jpg.adapt.crop16x9.1023w.jpg" alt="apex_card_img" style="width: 100%;">
+            <img src="https://c.tenor.com/-xpCOQ_0HXYAAAAC/apex-legends-intro.gif" alt="apex_card_img" id="apex-img">
             <div class="apex_container">
                 <form id="apex-form">
                     <label for="apex-kills">Kills:</label><br>
@@ -40,8 +40,16 @@
                 </form>
             </div>            
         </div>
+        <div id="getButtons">
+            <div>
+                <button id="goodAtApexButton">Are you good at Apex?</button>
+            </div>
+            <div>
+                <button id="couldYouBeBetter">Could you be better? 🤔</button>
+            </div>
+        </div>
         <!-- <div class="fortnite_card">
-            <img src="https://cdn2.unrealengine.com/21br-metaimage-lineup-1920x1080-44acd5f27136.jpg" alt="fortnite_card_img" style="width: 100%;">
+            <img src="https://i.imgur.com/9wfnwp9.gif" alt="fortnite_card_img" id="fortnite-img">
             <div class="fortnite_container">
                 <form id="fortnite-form">
                     <label for="fortnite-kills">Kills:</label><br>
@@ -53,8 +61,16 @@
                     <input type="submit" class="submit" value="Submit">
                 </form>
             </div>            
-        </div>  -->
-    </div>
+        </div>   
+        <div id="getFortniteButtons">
+            <div>
+                <button id="goodAtFortniteButton">Are you good at Fortnite?</button>
+            </div>
+            <div>
+                <button id="couldYouBeBetter">Could you be better? 🤔</button>
+            </div>
+        </div>
+    </div> -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/index.js"></script>
 </body>
