--- a/client/index.html
+++ b/client/index.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-    <header><a href="http://localhost:4004/index.html"><input type="image" src="https://www.svgrepo.com/show/147593/home-button.svg" name="home-button" class="btTxt_submit" id="home_btn"/></a>
-    <a href=""><input type="image" src="http://cdn.onlinewebfonts.com/svg/img_364496.png" name="profile_button" class="profile_btn"/></header></a>
+    <header><a href="http://localhost:4004/index.html"><input type="image" src="https://www.svgrepo.com/show/147593/home-button.svg" name="home-button" class="btTxt_submit" id="home_btn"/></a></header>
     <div class="cards">
         <!-- <div class="wz_card">
             <img src="https://www.callofduty.com/content/dam/atvi/callofduty/cod-touchui/blog/hero/mw-wz/WZ-Season-Three-Announce-TOUT.jpg" alt="warzone_card" style="width: 100%;">
@@ -27,7 +26,9 @@
             </div>  
         </div> -->
         <div class="apex_card">
+            <div id="apex-image">
             <img src="https://c.tenor.com/-xpCOQ_0HXYAAAAC/apex-legends-intro.gif" alt="apex_card_img" id="apex-img">
+            </div>
             <div class="apex_container">
                 <form id="apex-form">
                     <label for="apex-kills">Kills:</label><br>
@@ -71,6 +72,7 @@
             </div>
         </div>
     </div> -->
+    <div><a href="https://youtu.be/8teaQwlIsA8" id="getBetter">How to get better at Apex!</a></div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/index.js"></script>
 </body>
